--- a/content/resources/mit21g_301f04_ch1_ex2.md
+++ b/content/resources/mit21g_301f04_ch1_ex2.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains the information regarding in class activities.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21g-301-french-i-fall-2004/22e236fdce4ffeb235bc579e74f58457_MIT21G_301F04_ch1_ex2.pdf
 file_type: application/pdf
+parent_uid: c5cfbfca-c593-0461-0d26-864fd8574ef1
 resourcetype: Document
 title: "ACTIVITE: JE CHERCHE QUELQU\u2019UN QUI"
 uid: 22e236fd-ce4f-feb2-35bc-579e74f58457
