--- a/content/resources/mit21g_301f04_ch1_ex3.md
+++ b/content/resources/mit21g_301f04_ch1_ex3.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains the information regarding in class activities.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21g-301-french-i-fall-2004/6641390a978a57660b600b218aa7d517_MIT21G_301F04_ch1_ex3.pdf
 file_type: application/pdf
+parent_uid: c5cfbfca-c593-0461-0d26-864fd8574ef1
 resourcetype: Document
 title: "ACTIVIT\xC9: ETES-VOUS COMPATIBLES? "
 uid: 6641390a-978a-5766-0b60-0b218aa7d517
