--- a/content/resources/mit21g_301f04_ch2_ex3.md
+++ b/content/resources/mit21g_301f04_ch2_ex3.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains the information regarding in class activities.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21g-301-french-i-fall-2004/9b1d9b5744656365e07036089b53a742_MIT21G_301F04_ch2_ex3.pdf
 file_type: application/pdf
+parent_uid: c5cfbfca-c593-0461-0d26-864fd8574ef1
 resourcetype: Document
 title: 'ACTIVITE: LES FRANCOPHONES DE VOTRE LIVRE'
 uid: 9b1d9b57-4465-6365-e070-36089b53a742
