--- a/content/resources/mit21g_301f04_ch3_ex1.md
+++ b/content/resources/mit21g_301f04_ch3_ex1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains the information regarding in class activities.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21g-301-french-i-fall-2004/48aa447cf0e267cef49b517bbfe2d749_MIT21G_301F04_ch3_ex1.pdf
 file_type: application/pdf
+parent_uid: c5cfbfca-c593-0461-0d26-864fd8574ef1
 resourcetype: Document
 title: 'ACTIVITE: QUEL TEMPS FAIT-IL CHEZ VOUS?'
 uid: 48aa447c-f0e2-67ce-f49b-517bbfe2d749
