--- a/content/resources/mit21g_301f04_ch3_ex2.md
+++ b/content/resources/mit21g_301f04_ch3_ex2.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains the information regarding in class activities.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21g-301-french-i-fall-2004/5a5ccb763cf04ae4c7a475dd5ea034ac_MIT21G_301F04_ch3_ex2.pdf
 file_type: application/pdf
+parent_uid: c5cfbfca-c593-0461-0d26-864fd8574ef1
 resourcetype: Document
 title: 'ACTIVITE: UN WEEK-END DE REVE?'
 uid: 5a5ccb76-3cf0-4ae4-c7a4-75dd5ea034ac
