--- a/content/resources/mit21g_301f04_ch4_ex1.md
+++ b/content/resources/mit21g_301f04_ch4_ex1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains the information regarding in class activities.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21g-301-french-i-fall-2004/fde4139866d7237800bc30c3b503b903_MIT21G_301F04_ch4_ex1.pdf
 file_type: application/pdf
+parent_uid: c5cfbfca-c593-0461-0d26-864fd8574ef1
 resourcetype: Document
 title: 'ACTIVITE: EMPLOIS DU TEMPS'
 uid: fde41398-66d7-2378-00bc-30c3b503b903
