--- a/content/resources/mit21g_301f04_ch4_ex2.md
+++ b/content/resources/mit21g_301f04_ch4_ex2.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains the information regarding in class activities.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21g-301-french-i-fall-2004/353155161d8140203dc52e7cad9bafde_MIT21G_301F04_ch4_ex2.pdf
 file_type: application/pdf
+parent_uid: c5cfbfca-c593-0461-0d26-864fd8574ef1
 resourcetype: Document
 title: "La journ\xE9e du Roi Soleil"
 uid: 35315516-1d81-4020-3dc5-2e7cad9bafde
