--- a/content/resources/mit21g_301f04_ch5_ex3.md
+++ b/content/resources/mit21g_301f04_ch5_ex3.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains the information regarding in class activities.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21g-301-french-i-fall-2004/30956c4716609af8c3f87edc04f37553_MIT21G_301F04_ch5_ex3.pdf
 file_type: application/pdf
+parent_uid: c5cfbfca-c593-0461-0d26-864fd8574ef1
 resourcetype: Document
 title: 'ACTIVITE: JE ME DEGUISE: QUI SUIS-JE?'
 uid: 30956c47-1660-9af8-c3f8-7edc04f37553
