--- a/content/resources/mit21g_301f04_ch6_ex2.md
+++ b/content/resources/mit21g_301f04_ch6_ex2.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains the information regarding in class activities.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21g-301-french-i-fall-2004/38f64cada4413415c3b8c8e82331fc25_MIT21G_301F04_ch6_ex2.pdf
 file_type: application/pdf
+parent_uid: c5cfbfca-c593-0461-0d26-864fd8574ef1
 resourcetype: Document
 title: 'ACTIVITE: JE CHERCHE UN/E CO-LOCATAIRE'
 uid: 38f64cad-a441-3415-c3b8-c8e82331fc25
