--- a/content/resources/mit21g_301f04_ch7_ex1.md
+++ b/content/resources/mit21g_301f04_ch7_ex1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains the information regarding in class activities.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21g-301-french-i-fall-2004/57e49aff5449ecc17479856ecee6f658_MIT21G_301F04_ch7_ex1.pdf
 file_type: application/pdf
+parent_uid: c5cfbfca-c593-0461-0d26-864fd8574ef1
 resourcetype: Document
 title: 'ACTIVITE: INTERVIEW: DES QUESTIONS INDISCRETES'
 uid: 57e49aff-5449-ecc1-7479-856ecee6f658
